--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mqtt": "^4.3.7",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
