--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://github.com/thanhbinhle41/Experimento.git",
   "name": "experimento",
   "version": "0.1.0",
   "private": true,
@@ -10,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.23.6",
     "chart.js": "^3.9.1",
+    "gh-pages": "^4.0.0",
     "mqtt": "^4.3.7",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
