--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://thanhbinhle41.github.io/Experimento",
+  "homepage": "https://github.com/thanhbinhle41/Experimento",
   "name": "experimento",
   "version": "0.1.0",
   "private": true,
