--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "redux-persist": "^6.0.0",
     "sass": "^1.55.0",
     "web-vitals": "^2.1.4",
+    "websocket": "^1.0.34",
     "xlsx": "^0.18.5"
   },
   "scripts": {
